# file-organizer-cpp

./: CMakeLists.txt  FileClassifier.cpp  FileClassifier.h  FileMover.cpp  FileMover.h  FileOrganizer.cpp  FileOrganizer.slnx  FileOrganizer.vcxproj  FileOrganizer.vcxproj.filters  FileScanner.cpp  FileScanner.h  README.md  index.html  mainwindow.cpp  mainwindow.h
